--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -66,6 +66,19 @@ input {
     font-size: inherit;
 }
 
+%responsive {
+    transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+%responsive:hover {
+    transform: scale(0.98);
+    transition-duration: 0.1s;
+}
+%responsive:active {
+    transform: scale(0.95);
+}
+
 #notifications {
     position: fixed;
     top: 0;
@@ -79,13 +92,74 @@ input {
 .notification {
     display: flex;
     background-color: white;
-    box-shadow: 0 0 10px #0008;
-    border-radius: 8px;
+    box-shadow: 0 0 8px #0008;
+    border-radius: $radius;
     padding: 8px;
     align-items: center;
     gap: 4px;
 
     span {
         margin-left: 4px;
+    }
+}
+
+#charPick {
+    position: fixed;
+    max-width: 70%;
+
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    box-shadow: 0 0 8px #0006;
+    border-radius: $radius;
+    padding: 16px 32px;
+    gap: 16px;
+    align-items: center;
+
+    .char {
+        @extend %responsive;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        cursor: pointer;
+        transition-duration: 0.1s;
+
+        img {
+            width: 80px;
+            height: 80px;
+        }
+    }
+    .char:hover {
+        text-decoration: underline;
+    }
+}
+
+.roster {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+}
+
+#overlay {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
+
+    > * {
+        position: fixed;
+        opacity: 0;
+        pointer-events: none;
+        transition-duration: 0.1s;
+    }
+    > .show {
+        opacity: 1;
+        pointer-events: all;
     }
 }
