--- a/web/sass/upload.scss
+++ b/web/sass/upload.scss
@@ -17,6 +17,8 @@
     --corner-size: calc(var(--resizer-size) + 10px);
     z-index: 2;
     cursor: move;
+    // box-shadow: 0px 0px 8px #fffa;
+    outline: 1px solid #fffa;
 
     > * {
         background-color: transparent;
