modifiable cell size

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -122,10 +122,20 @@ input {
     margin-bottom: 1px;
     background-color: inherit;
     color: inherit;
+
+    &:focus {
+        border-bottom: 2px solid #555;
+        margin-bottom: 0;
+    }
+
+    &[type=number] {
+        width: 80px;
+    }
 }
-input:focus {
-    border-bottom: 2px solid #555;
-    margin-bottom: 0;
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.5;
 }
 
 li {
