--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -15,7 +15,8 @@
         background-color: var(--color-not-intense);
         display: flex;
         flex-direction: column;
-        padding: 8px;
+        padding: 8px 16px;
+        gap: 8px;
 
         button.active {
             color: var(--color-text-primary);
