--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -4,6 +4,8 @@
     position: relative;
     overflow: hidden;
     user-select: none;
+    width: 100%;
+    height: 100%;
     min-height: 500px;
     display: flex;
     justify-content: center;
@@ -12,17 +14,30 @@
     > .controls {
         position: absolute;
         z-index: 5;
-        right: 16px;
-        top: 16px;
-        background-color: var(--color-not-intense);
         padding: 8px 16px;
+        box-sizing: border-box;
         gap: 8px;
-        max-width: 400px;
 
         button.active {
             color: var(--color-text-primary);
             background-color: var(--color-button-big);
         }
+
+        #gridControls {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    #sceneEditor {
+        top: 16px;
+        right: 16px;
+    }
+
+    #sceneSelector {
+        bottom: 0;
+        width: 100%;
+        border-radius: 0%;
 
         #scenes {
             flex-direction: row;
@@ -32,7 +47,8 @@
             padding: 8px 0;
 
             > div {
-                width: 120px;
+                min-width: 120px;
+                max-width: 120px;
                 height: 80px;
                 border-radius: 8px;
                 overflow: hidden;
@@ -42,12 +58,12 @@
                 transition-duration: 0.1s;
                 transition-property: border-color;
 
-                &.playing {
-                    border-color: var(--color-selected);
-                }
                 &.editing {
                     border-color: var(--color-selected);
                     border-style: dashed;
+                }
+                &.playing {
+                    border-color: var(--color-good);
                 }
                 &:hover {
                     border-color: var(--color-text-primary);
@@ -59,11 +75,6 @@
                     object-fit: cover;
                 }
             }
-        }
-
-        #gridControls {
-            display: flex;
-            flex-direction: column;
         }
     }
 }
@@ -77,7 +88,7 @@
     outline: 1px solid transparent;
 }
 
-#grid {
+#grid, canvas {
     position: absolute;
 }
 
