fix scene ref updating

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -62,6 +62,7 @@
                 border: 2px solid transparent;
                 background-size: cover;
                 background-origin: border-box;
+                background-position: center;
 
                 &.editing {
                     @extend %active;
