--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -31,6 +31,12 @@
         #gridControls {
             display: flex;
             flex-direction: column;
+
+            > span {
+                display: flex;
+                gap: 8px;
+                align-items: center;
+            }
         }
     }
 
