--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -64,6 +64,7 @@
                     max-width: 120px;
                     height: 80px;
                     border-radius: 8px;
+                    overflow: hidden;
                     box-sizing: border-box;
                     cursor: pointer;
                     border: 2px solid transparent;
@@ -80,6 +81,7 @@
                     }
     
                     button {
+                        border-radius: 0%;
                         width: 100%;
                         height: 100%;
                         opacity: 0;
