only display gm tools for gm

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -166,6 +166,12 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+
+    &:not(.is-gm) {
+        .gm {
+            display: none !important;
+        }
+    }
 }
 
 .dice {
